--- a/web/instagram-style-app/amplify/backend/backend-config.json
+++ b/web/instagram-style-app/amplify/backend/backend-config.json
@@ -1,1 +1,9 @@
-{}
+{
+	"auth": {
+		"instagramstyleappeab081a3": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": []
+		}
+	}
+}
