--- a/web/instagram-style-app/amplify/backend/auth/instagramstyleappf11b7e99/instagramstyleappf11b7e99-cloudformation-template.yml
+++ b/web/instagram-style-app/amplify/backend/auth/instagramstyleappf11b7e99/instagramstyleappf11b7e99-cloudformation-template.yml
@@ -118,7 +118,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'instageab081a3_sns-role', !Join ['',[ 'sns', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'instagf11b7e99_sns-role', !Join ['',[ 'sns', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -130,10 +130,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: instageab081a3_role_external_id
+                sts:ExternalId: instagf11b7e99_role_external_id
       Policies: 
         - 
-          PolicyName: instageab081a3-sns-policy
+          PolicyName: instagf11b7e99-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -179,7 +179,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: instageab081a3_role_external_id
+        ExternalId: instagf11b7e99_role_external_id
     
   
   UserPoolClientWeb:
@@ -187,7 +187,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: instageab081a3_app_clientWeb
+      ClientName: instagf11b7e99_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -197,7 +197,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: instageab081a3_app_client
+      ClientName: instagf11b7e99_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -262,7 +262,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: instageab081a3_userpoolclient_lambda_iam_policy
+      PolicyName: instagf11b7e99_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -279,7 +279,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: instageab081a3_userpoolclient_lambda_log_policy
+      PolicyName: instagf11b7e99_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -666,7 +666,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'instagramstyleappeab081a3_identitypool_eab081a3', !Join ['',['instagramstyleappeab081a3_identitypool_eab081a3', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'instagramstyleappf11b7e99_identitypool_f11b7e99', !Join ['',['instagramstyleappf11b7e99_identitypool_f11b7e99', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
