--- a/web/instagram-style-app/package.json
+++ b/web/instagram-style-app/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "aws-amplify": "^2.2.0",
-    "aws-amplify-react": "^3.1.1",
+    "antd": "^3.26.3",
+    "aws-amplify": "^2.2.1",
+    "aws-amplify-react": "^3.1.2",
     "history": "^4.10.1",
     "react": "^16.11.0",
     "react-dom": "^16.12.0",
+    "react-navigation": "^4.0.10",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
